force-app/main/default/objects/Raise_Demand_Tracker__c/Raise_Demand_Tracker__c.object-meta.xml
<CustomObject>
    <label>Raise Demand Tracker</label>
    <nameField>
        <displayFormat>RDT-{000000000}</displayFormat>
        <label>Raise Demand Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Raise Demand Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>