force-app/main/default/objects/Raise_Demand_Tracker__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Raise Demand Tracker</relationshipLabel>
    <relationshipName>Raise_Demand_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>