force-app/main/default/objects/Raise_Demand_Tracker__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand</label>
    <referenceTo>Demand__c</referenceTo>
    <relationshipLabel>Raise Demand Tracker</relationshipLabel>
    <relationshipName>Raise_Demand_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>