force-app/main/default/objects/Raise_Demand_Tracker__c/fields/Is_Demand_Raised__c.field-meta.xml
<CustomField>
    <fullName>Is_Demand_Raised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Demand Raised</label>
    <type>Checkbox</type>
</CustomField>