force-app/main/default/objects/Raise_Demand_Tracker__c/fields/Milestone_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Due_Date__c</fullName>
    <formula>Payment_Milestones__r.Milestone_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Due Date</label>
    <type>Date</type>
</CustomField>