force-app/main/default/objects/Raise_Demand_Tracker__c/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <formula>Payment_Milestones__r.Milestone_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Name</label>
    <type>Text</type>
</CustomField>