force-app/main/default/objects/Raise_Demand_Tracker__c/fields/Payment_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestones__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Milestones</label>
    <referenceTo>Payment_Milestones__c</referenceTo>
    <relationshipLabel>Raise Demand Tracker</relationshipLabel>
    <relationshipName>Raise_Demand_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>