force-app/main/default/objects/Raise_Demand_Tracker__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>Booking__r.Unit__r.Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>