force-app/main/default/objects/Raise_Demand_Tracker__c/fields/Raise_Demand_Date__c.field-meta.xml
<CustomField>
    <fullName>Raise_Demand_Date__c</fullName>
    <label>Raise Demand Date</label>
    <type>Date</type>
</CustomField>