force-app/main/default/objects/Raise_Demand_Tracker__c/fields/Retry_To_Process__c.field-meta.xml
<CustomField>
    <fullName>Retry_To_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry To Process</label>
    <type>Checkbox</type>
</CustomField>