force-app/main/default/objects/Raise_Demand_Tracker__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <formula>Booking__r.Tower_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower</label>
    <type>Text</type>
</CustomField>