force-app/main/default/objects/Raise_Demand_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Tower__c</columns>
    <columns>Unit__c</columns>
    <columns>Booking__c</columns>
    <columns>Payment_Milestones__c</columns>
    <columns>Milestone_Name__c</columns>
    <columns>Milestone_Due_Date__c</columns>
    <columns>Demand__c</columns>
    <columns>Skip_Auto_Demand_Generation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>