force-app/main/default/objects/Raise_Demand_Tracker__c/listViews/Error_In_Demand_Raising.listView-meta.xml
<ListView>
    <fullName>Error_In_Demand_Raising</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Booking__c</columns>
    <columns>Tower__c</columns>
    <columns>Project__c</columns>
    <columns>Skip_Auto_Demand_Generation__c</columns>
    <columns>Milestone_Name__c</columns>
    <columns>Demand__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Demand__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Skip_Auto_Demand_Generation__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Error In Demand Raising</label>
</ListView>